test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-oknil-shared.good
init-var-nonnil-owned-from-oknil-shared.chpl:9: error: cannot assign to an owned variable from a shared class
